--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-axios": "^2.0.2",
-    "vue-router": "^3.0.1"
+    "vue-clickaway": "^2.2.0",
+    "vue-drag-drop": "^0.2.4",
+    "vue-router": "^3.0.1",
+    "vue2-dropzone": "^3.0.6",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
