--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bulma": "^0.7.1",
+    "downloadjs": "^1.4.7",
     "express": "^4.16.3",
+    "facebook-login-vuejs": "^2.1.3",
     "v-viewer": "^1.0.0",
+    "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-awesome": "^3.0.0",
     "vue-axios": "^2.0.2",
-    "vue-clickaway": "^2.2.0",
+    "vue-click-outside": "^1.0.7",
+    "vue-clickaway": "^2.1.0",
     "vue-drag-drop": "^0.2.4",
+    "vue-headful": "^2.0.1",
     "vue-js-modal": "^1.3.13",
     "vue-notification": "^1.3.7",
     "vue-router": "^3.0.1",
+    "vue-script2": "^2.0.1",
     "vue2-dropzone": "^3.0.6",
     "vuex": "^3.0.1"
   },
