--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aos": "^2.2.0",
     "axios": "^0.17.1",
     "bulma": "^0.7.1",
     "downloadjs": "^1.4.7",
@@ -29,6 +30,7 @@
     "vue-headful": "^2.0.1",
     "vue-js-modal": "^1.3.13",
     "vue-notification": "^1.3.7",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.1",
     "vue-script2": "^2.0.1",
     "vue2-dropzone": "^3.0.6",
@@ -44,6 +46,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
