--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front4pjt",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Alexandre surin <alexandre-surin@live.fr>",
+  "author": "Supfiles",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
